--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -1,22 +1,20 @@
-# remap prefix to Control + a
-unbind C-b
+# General --------------------------------------------------------------------
+set -g default-terminal "screen-256color" # colors!
+set -s escape-time 0                      # fastest command sequences
+set -sg repeat-time 600                   # increase repeat timeout
+set -s quiet on                           # disable various messages
+set -g status-utf8 on                     # expect UTF-8
+setw -g utf8 on
+unbind C-b                                # remap prefix to Control + a
 set -g prefix C-a
-
-# send the prefix to client inside window (for nested sessions)
-bind C-a send-prefix
-
-# ` as a shortcut for nested sessions
-# bind-key -n ` send-prefix
+bind C-a send-prefix                      # send the prefix to client inside window (for nested sessions)
+set -g history-limit 5000                 # History limit
 
 
-# # toggle statusbar
-# bind-key b set-option status
+# Navigation -------------------------------------------------------------------
 
-
-
-# # force a reload of the config file
-# unbind r
-# bind r source-file ~/.tmux.conf
+# find session
+bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # Allow switching focused pane by mouse click
 setw -g mode-mouse on
@@ -24,97 +22,17 @@ set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-option -g mouse-resize-pane on
 
-# # Set the overall wm window title (not that useful)
-# set-option -g set-titles on
-# set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
-
-# Count windows from 1
-set -g base-index 1
-set-window-option -g pane-base-index 1
-
-# Resize windows with multiple clients (resize when the window is not focused in the smaller screen)
-setw -g aggressive-resize on
-
-# History limit
-set -g history-limit 5000
-
-# # Style
-# set-option -g status-utf8 on
-# set -g status-bg black
-# set -g status-fg green
-# set -g status-left-length 15
-# set -g status-left ' #[fg=cyan,bright]#10H#[fg=green]:#[fg=white]#S#[fg=green] | #[default]'
-# set -g status-right '| #[fg=yellow]%y-%m-%d %H:%M '
-# set -g status-justify centre
-# set-option -g status-left '#P'
-# set-option -g pane-active-border-fg blue
-
-# #no visual notification 
-# setw -g monitor-activity off
-# set -g visual-activity on
-
-# Automatically set window title
-setw -g automatic-rename
-
-# Set the esc/alt disambiguation timeout to 50ms. The default is half a second, which makes vim kind of painful.
-set-option -sg escape-time 1
-
-# Set TERM=screen-256color in new windows. 
-set-option -g default-terminal screen-256color
-
-# xterm sequences
-set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
-
 # Window splitting
 unbind %
 unbind '"'
 bind-key | split-window -h -c "#{pane_current_path}"
 bind-key - split-window -v -c "#{pane_current_path}"
 
-# bind-key k run-shell "toggl stop '#S'; tmux kill-session -t '#S'"
-# bind-key d run-shell "toggl stop '#S'; tmux detach-client"
+set-window-option -g xterm-keys on # to make ctrl-arrow, etc. work
 
 # ctrl+left/right cycles thru windows
 bind-key -n C-right next
 bind-key -n C-left prev
-
-
-
-# # Automatic renumber
-set-option -g renumber-windows on
-
-
-# Colors
-# default statusbar colors
-# set-option -g status-bg colour235 #base02
-# set-option -g status-fg colour136 #yellow
-# set-option -g status-attr default
-
-# default window title colors
-# set-window-option -g window-status-fg colour244 #base0
-# set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-# set-window-option -g window-status-current-fg colour166 #orange
-# set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-# set-option -g pane-border-fg colour235 #base02
-# set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-# set-option -g message-bg colour235 #base02
-# set-option -g message-fg colour166 #orange
-
-# pane number display
-# set-option -g display-panes-active-colour colour33 #blue
-# set-option -g display-panes-colour colour166 #orange
-
-# clock
-# set-window-option -g clock-mode-colour colour64 #green
-
 
 # https://github.com/christoomey/vim-tmux-navigator
 bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
@@ -124,13 +42,26 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\'') || tmux select-pane -l"
 
 
+# Display ----------------------------------------------------------------------
 
-# set-option -g status on
-# set-option -g status-interval 2
-# set-option -g status-utf8 on
-# set-option -g status-justify "centre"
-# set-option -g status-left-length 60
-# set-option -g status-right-length 90
-# set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]⮀#[fg=colour255, bg=colour27] #I ⮁ #W #[fg=colour27, bg=colour235]⮀"
+set -g base-index 1                                   # start windows numbering at 1
+setw -g pane-base-index 1                             # make pane numbering consistent with windows
+set -g renumber-windows on                            # renumber windows when a window is closed
+setw -g aggressive-resize on                          # Resize windows with multiple clients (resize when the window is not focused in the smaller screen)
+set-option -g status-position top                     # Status bar on top
+set -g set-titles on                                  # set terminal title
+set -g set-titles-string '#h ❐ #S ● #I #W'
+set -g display-panes-time 800                         # slightly longer pane indicators display time
+set -g display-time 1000                              # slightly longer status messages display time
+set -g status-interval 10                             # redraw status line every 10 seconds
+setw -g clock-mode-style 24                           # 24 hour clock
+bind -n C-l send-keys C-l \; run 'tmux clear-history' # clear both screen and history
+setw -g automatic-rename                              # Automatically set window title
+
+# activity
+set -g monitor-activity on
+set -g visual-activity off
+
+# Powerline
 run-shell "powerline-daemon -q"
 source "$HOME/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
