--- a/src/install.sh.in
+++ b/src/install.sh.in
@@ -7,22 +7,10 @@ if [ ! -f "${HOME}.local/bin/powerline" ]; then
     sudo apt-get install -y python-pip git python-dev fontconfig
     pip install --user powerline-status
     pip3 install --user powerline-status
-    # Shipping with the fonts already in the payload
-    # git clone https://github.com/powerline/fonts /tmp/fonts
-    # if [ ! -d /tmp/fonts ]; then
-    #     exit 1
-    # fi
-    # pushd /tmp/fonts
-    # ./install.sh
-    # popd
     . ~/.bashrc
 else
     say 'Skipping, already installed.'
 fi
-
-say "Installing fonts."
-sudo apt-get install -y fontconfig
-sudo fc-cache -vf ~/.fonts/
 
 say "Installing and configuring IPython."
 if ! which ipython; then
@@ -38,8 +26,8 @@ if ! which nvim; then
     sudo apt-get install -y python-dev python-pip  python3-pip xclip python-dev build-essential cmake
     sudo add-apt-repository -y ppa:neovim-ppa/unstable
     sudo apt-get update
-    sudo apt-get install -y neovim
-    pop install --user neovim
+    sudo apt-get install -y neovim curl
+    pip install --user neovim
     sudo update-alternatives --install /usr/bin/vi vi /usr/bin/nvim 60
     sudo update-alternatives --install /usr/bin/vim vim /usr/bin/nvim 60
     sudo update-alternatives --install /usr/bin/editor editor /usr/bin/nvim 60
