--- a/src/install.sh.in
+++ b/src/install.sh.in
@@ -23,7 +23,7 @@ fi
 
 say 'Installing and configuring NeoVim.'
 if ! which nvim; then
-    sudo apt-get install -y python-dev python-pip  python3-pip xclip python-dev build-essential cmake
+    sudo apt-get install -y python-dev python-pip  python3-pip xclip python-dev build-essential cmake silversearcher-ag
     sudo add-apt-repository -y ppa:neovim-ppa/unstable
     sudo apt-get update
     sudo apt-get install -y neovim curl
