--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -6,8 +6,8 @@ set -s quiet on                           # disable various messages
 set -g status-utf8 on                     # expect UTF-8
 setw -g utf8 on
 unbind C-b                                # remap prefix to Control + a
-set -g prefix C-a
-bind C-a send-prefix                      # send the prefix to client inside window (for nested sessions)
+set -g prefix C-Space
+bind C-Space send-prefix                      # send the prefix to client inside window (for nested sessions)
 set -g history-limit 5000                 # History limit
 
 
